--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -21,6 +21,7 @@ cask "google-chrome"
 cask "iina"
 cask "iterm2"
 cask "nrlquaker-winbox"
+cask "pixelsnap"
 cask "rectangle"
 cask "spotify"
 cask "telegram"
@@ -31,7 +32,6 @@ cask "zoom"
 mas "1Password for Safari", id: 1569813296
 mas "Hand Mirror", id: 1502839586
 mas "Paste", id: 967805235
-mas "Pixel Winch", id: 735066709
 mas "System Color Picker", id: 1545870783
 mas "The Unarchiver", id: 425424353
 mas "Things", id: 904280696
