--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -4,13 +4,14 @@ tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "homebrew/services"
 
+brew "irssi"
 brew "jql"
 brew "mas"
 brew "nvm"
 brew "ssh-copy-id", link: true
 brew "starship"
-brew "zsh"
 brew "zsh-autosuggestions"
+brew "zsh"
 
 cask "1password"
 cask "cleanshot"
