--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -21,6 +21,7 @@ cask "font-fira-code"
 cask "google-chrome"
 cask "iina"
 cask "iterm2"
+cask "keka"
 cask "nrlquaker-winbox"
 cask "pixelsnap"
 cask "rectangle"
@@ -34,6 +35,5 @@ mas "1Password for Safari", id: 1569813296
 mas "Hand Mirror", id: 1502839586
 mas "Paste", id: 967805235
 mas "System Color Picker", id: 1545870783
-mas "The Unarchiver", id: 425424353
 mas "Things", id: 904280696
 mas "WiFi Explorer", id: 494803304
