add raycast cask

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -23,6 +23,7 @@ cask "iterm2"
 cask "keka"
 cask "nrlquaker-winbox"
 cask "pixelsnap"
+cask "raycast"
 cask "rectangle"
 cask "spotify"
 cask "telegram"
