add sonos cask to homebrew

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -25,6 +25,7 @@ cask "nrlquaker-winbox"
 cask "pixelsnap"
 cask "raycast"
 cask "rectangle"
+cask "sonos"
 cask "spotify"
 cask "telegram"
 cask "visual-studio-code"
